hphp/hack/test/typecheck/massive_type.php.exp
File "massive_type.php", line 19, characters 5-6:
Invalid argument (Typing[4110])
  File "massive_type.php", line 22, characters 12-14:
  Expected `int`
  File "massive_type.php", line 18, characters 12-12:
  But got `shape('a' => shape('a' => shape('a' => shape('a' => shape('a' => shape('a' => shape('a' => shape('a' => shape('a' => shape('a' => shape('a' => shape('a' => shape('a' => shape('a' => int, 'b' => int), 'b' => shape('a' => int, 'b' => int)), 'b' => shape('a' => shape('a' => int, 'b' => int), 'b' => shape('a' => int, 'b' => int))), 'b' => shape('a' => shape('a' => shape('a' => int, 'b' => int), 'b' => shape('a' => int, 'b' => int)), 'b' => shape('a' => shape('a' => int, 'b' => int), 'b' => shape('a' => int, 'b' => int)))), 'b' => shape('a' => shape('a' => shape('a' => shape('a' => int, 'b' => int), 'b' => shape('a' => int, 'b' => int)), 'b' => shape('a' => shape('a' => int, 'b' => int), 'b' => shape('a' => int, 'b' => int))), 'b' => shape('a' => shape('a' => shape('a' => int, 'b' => int), 'b' => shape('a' => int, 'b' => int)), 'b' => shape('a' => shape('a' => int, 'b' => int), 'b' => shape('a' => int, 'b' => int))))), 'b' => shape('a' => shape('a' => shape('a' => shape('a' => shape('a' => int, 'b' => int), 'b' => shape('a' => int, 'b' => int)), 'b' => shape('a' => shape('a' => int, 'b' => int), 'b' => shape('a' => int, 'b' => int))), 'b' => shape('a' => shape('a' => shape('a' => int, 'b' => int), 'b' => shape('a' => int, 'b' => int)), 'b' => shape('a' => shape('a' => int, 'b' => int), 'b' => [truncated]))), 'b' => [truncated])), 'b' => [truncated]), 'b' => [truncated]), 'b' => [truncated]), 'b' => [truncated]), 'b' => [truncated]), 'b' => [truncated]), 'b' => [truncated]), 'b' => [truncated]) [This type was truncated. If you need more of the type, use `hh stop; hh --config type_printer_fuel=N`. At this time, N is 100.]`
